--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,16 @@
 body {
-    padding: 0 10px 5px 10px;
+    padding: 0 40px 5px 40px;
 }
 
 .btn-group-sm {
     padding: 5px 0 5px 0;
 }
 
-.modest .panel-modest .panel-body {
-    display: inline-block;
-}
+/*.panel-modest {*/
+    /*display: inline-block;*/
+/*}*/
 
 .col-modest {
     display: inline-block;
-    padding: 5px 5px 5px 5px;
+    padding: 7px 7px 7px 7px;
 }
