--- a/src/index.css
+++ b/src/index.css
@@ -2,15 +2,19 @@ body {
     padding: 0 40px 5px 40px;
 }
 
+.col-modest {
+    display: inline-block;
+}
+
 .btn-group-sm {
     padding: 5px 0 5px 0;
 }
 
-/*.panel-modest {*/
-    /*display: inline-block;*/
-/*}*/
-
-.col-modest {
+.panel-modest {
     display: inline-block;
-    padding: 7px 7px 7px 7px;
+    margin: 5px 5px 5px 5px;
+}
+
+#card {
+    resize: vertical;
 }
